argocd/applications/gitea/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-tailscale
  namespace: gitea
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - gitea.ide-newton.ts.net
  rules:
    - host: gitea.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http-tailscale
                port:
                  number: 80
